<resources>
    <string name="app_name">Topo Kerlouan</string>
    <string name="cremiou">Cremiou</string>
    <string name="bivouac">Bivouac</string>
    <string name="riviere">Rivière</string>
    <string name="petit_paradis">Petit Paradis</string>
    <string name="meneham">MeneHam</string>
    <string name="tout">Tout</string>

    <string name="infos_appli">Info appli</string>
    <string name="txt_credits_head">
        Topo Kerlouan
    </string>

    <string name="txt_credits_link">
Appli basée sur le topo Kimpadenn :\n
        http://krimpadenn.fr/articles/categories-articles/cartedebretagne/18-kerlouan
        \n


    </string>

    <string name="txt_credits_body">
        \n
        et :
        http://kerlouanabloc.blogspot.com/
        \n
        \n
Annuaire des marées : \n
        http://maree.info/73    </string>
    <string name="neizvran">Neiz Vran</string>


</resources>
