<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/background_mer"

    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppToolbar" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#ddffffff"
        android:padding="@dimen/menu_padding"
        >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"

            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            >


            <Button
                android:id="@+id/tout"
                style="@style/CodeFont"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/menu_margin_top"
                android:layout_marginBottom="@dimen/menu_margin_bottom"


                android:background="@drawable/mybutton"
                android:onClick="boutonTout"
                android:text="@string/tout" />


            <Button
                android:id="@+id/paradis"
                style="@style/CodeFont"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/menu_margin_bottom"
                android:background="@drawable/mybutton"

                android:onClick="boutonParadis"
                android:text="@string/petit_paradis" />

            <Button
                android:id="@+id/bivouac"
                style="@style/CodeFont"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/menu_margin_bottom"

                android:background="@drawable/mybutton"
                android:onClick="boutonBivouac"
                android:text="@string/bivouac" />

            <Button
                android:id="@+id/meneham"
                style="@style/CodeFont"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/menu_margin_bottom"
                android:background="@drawable/mybutton"

                android:onClick="boutonMeneHam"
                android:text="@string/meneham" />

            <Button
                android:id="@+id/riviere"
                style="@style/CodeFont"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/menu_margin_bottom"
                android:background="@drawable/mybutton"

                android:onClick="boutonRiviere"
                android:text="@string/riviere" />

            <Button
                android:id="@+id/cremiou"
                style="@style/CodeFont"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/menu_margin_bottom"
                android:background="@drawable/mybutton"

                android:onClick="boutonCremiou"
                android:text="@string/cremiou" />

            <Button
                android:id="@+id/neizvran"
                style="@style/CodeFont"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/menu_margin_bottom"
                android:background="@drawable/mybutton"

                android:onClick="boutonNeizvran"
                android:text="@string/neizvran" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>